--- a/Game.html
+++ b/Game.html
@@ -16,22 +16,36 @@
 	<body class="game-screen">
 		<img class="logo" src="./img/logo.png" />
 		<h1 class="title-game">ELEMENTO</h1>
+		<!-- classes -->
+        <script src="js/classes/CollisionBlock.js"></script>
+        <script src="js/classes/Sprite.js"></script>
+        <script src="js/classes/Player.js"></script>
 
-		<canvas></canvas>
-		<script src="./js/utils.js"></script>
-		<script src="./js/data/collisions.js"></script>
-		<script src="./js/classes/CollisionBlock.js"></script>
-		<script src="./js/classes/Sprite.js"></script>
-		<script src="./js/classes/Player.js"></script>
-		<script src="./js/eventListeners.js"></script>
-		<script src="./index.js"></script>
-		<script src="./js/utils.js"></script>
-		<script src="./js/data/collisions.js"></script>
-		<script src="./js/classes/CollisionBlock.js"></script>
-		<script src="./js/classes/Sprite.js"></script>
-		<script src="./js/classes/Player.js"></script>
-		<script src="./js/eventListeners.js"></script>
-		<script src="./index.js"></script>
+        <!-- player -->
+        <script src="js/eventListeners.js"></script>
+        <script src="js/elements.js"></script>
+        <script src="js/player.js"></script>
+
+        <!-- levels -->
+        <script src="js/levels/utils.js"></script>
+
+        <!-- maps -->
+        <script src="js/levels/maps/map1.js"></script>
+        <script src="js/levels/maps/map2.js"></script>
+        <script src="js/levels/maps/map3.js"></script>
+        <script src="js/levels/maps/map4.js"></script>
+        <script src="js/levels/maps/map5.js"></script>
+
+        <!-- collisions -->
+        <script src="js/levels/collisions/collisions1.js"></script>
+        <script src="js/levels/collisions/collisions2.js"></script>
+        <script src="js/levels/collisions/collisions3.js"></script>
+        <script src="js/levels/collisions/collisions4.js"></script>
+        <script src="js/levels/collisions/collisions5.js"></script>
+
+        <!-- game window -->
+        <canvas></canvas>
+        <script src="index.js"></script>
 	</body>
 
 	<footer class="game-footer">
